src/.antlr/ConfefeParser.java
// Generated from /Users/david/Dropbox/projects/confefe/src/Confefe.g4 by ANTLR 4.7.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ConfefeParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, NIL=2, NULL=3, TRUE=4, FALSE=5, DECIMAL_DIGIT=6, STRING_LITERAL=7, 
		UNICODE_VALUE=8, BYTE_VALUE=9, OCTAL_BYTE_VALUE=10, HEX_BYTE_VALUE=11, 
		LITTLE_U_VALUE=12, BIG_U_VALUE=13, ESCAPED_CHAR=14, NEWLINE=15, UNICODE_CHAR=16, 
		BACKSLASH=17, DOT=18, COMMA=19, COLON=20, HYPHEN=21, LBRACE=22, RBRACE=23, 
		LBRACKET=24, RBRACKET=25, WS=26, LWS=27, NL=28, LINE_COMMENT=29, INDENT=30, 
		DEDENT=31, LHS=32;
	public static final int
		RULE_file = 0, RULE_topLevelMap = 1, RULE_unbracketedMap = 2, RULE_unbracketedKeyValuePair = 3, 
		RULE_bracketedMap = 4, RULE_commaDelimitedKeyValuePairs = 5, RULE_commaDelimitedKeyValuePair = 6, 
		RULE_topLevelList = 7, RULE_unbracketedList = 8, RULE_unbracketedListItem = 9, 
		RULE_bracketedList = 10, RULE_key = 11, RULE_map = 12, RULE_list = 13, 
		RULE_primitive = 14, RULE_simpleValue = 15, RULE_value = 16, RULE_nil = 17, 
		RULE_bool = 18, RULE_intLiteral = 19, RULE_decimalLiteral = 20;
	public static final String[] ruleNames = {
		"file", "topLevelMap", "unbracketedMap", "unbracketedKeyValuePair", "bracketedMap", 
		"commaDelimitedKeyValuePairs", "commaDelimitedKeyValuePair", "topLevelList", 
		"unbracketedList", "unbracketedListItem", "bracketedList", "key", "map", 
		"list", "primitive", "simpleValue", "value", "nil", "bool", "intLiteral", 
		"decimalLiteral"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'+'", "'nil'", "'null'", "'true'", "'false'", null, null, null, 
		null, null, null, null, null, null, null, null, "'\\'", "'.'", "','", 
		"':'", "'-'", "'{'", "'}'", "'['", "']'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, "NIL", "NULL", "TRUE", "FALSE", "DECIMAL_DIGIT", "STRING_LITERAL", 
		"UNICODE_VALUE", "BYTE_VALUE", "OCTAL_BYTE_VALUE", "HEX_BYTE_VALUE", "LITTLE_U_VALUE", 
		"BIG_U_VALUE", "ESCAPED_CHAR", "NEWLINE", "UNICODE_CHAR", "BACKSLASH", 
		"DOT", "COMMA", "COLON", "HYPHEN", "LBRACE", "RBRACE", "LBRACKET", "RBRACKET", 
		"WS", "LWS", "NL", "LINE_COMMENT", "INDENT", "DEDENT", "LHS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Confefe.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ConfefeParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class FileContext extends ParserRuleContext {
		public FileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file; }
	 
		public FileContext() { }
		public void copyFrom(FileContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class FileTopLevelMapContext extends FileContext {
		public TopLevelMapContext topLevelMap() {
			return getRuleContext(TopLevelMapContext.class,0);
		}
		public TerminalNode EOF() { return getToken(ConfefeParser.EOF, 0); }
		public FileTopLevelMapContext(FileContext ctx) { copyFrom(ctx); }
	}
	public static class FileTopLevelListContext extends FileContext {
		public TopLevelListContext topLevelList() {
			return getRuleContext(TopLevelListContext.class,0);
		}
		public TerminalNode EOF() { return getToken(ConfefeParser.EOF, 0); }
		public FileTopLevelListContext(FileContext ctx) { copyFrom(ctx); }
	}

	public final FileContext file() throws RecognitionException {
		FileContext _localctx = new FileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_file);
		try {
			setState(48);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				_localctx = new FileTopLevelMapContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(42);
				topLevelMap();
				setState(43);
				match(EOF);
				}
				break;
			case 2:
				_localctx = new FileTopLevelListContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(45);
				topLevelList();
				setState(46);
				match(EOF);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TopLevelMapContext extends ParserRuleContext {
		public UnbracketedMapContext unbracketedMap() {
			return getRuleContext(UnbracketedMapContext.class,0);
		}
		public BracketedMapContext bracketedMap() {
			return getRuleContext(BracketedMapContext.class,0);
		}
		public TopLevelMapContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_topLevelMap; }
	}

	public final TopLevelMapContext topLevelMap() throws RecognitionException {
		TopLevelMapContext _localctx = new TopLevelMapContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_topLevelMap);
		try {
			setState(52);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
			case NIL:
			case NULL:
			case TRUE:
			case FALSE:
			case DECIMAL_DIGIT:
			case STRING_LITERAL:
			case HYPHEN:
				enterOuterAlt(_localctx, 1);
				{
				setState(50);
				unbracketedMap();
				}
				break;
			case LBRACE:
				enterOuterAlt(_localctx, 2);
				{
				setState(51);
				bracketedMap();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UnbracketedMapContext extends ParserRuleContext {
		public List<UnbracketedKeyValuePairContext> unbracketedKeyValuePair() {
			return getRuleContexts(UnbracketedKeyValuePairContext.class);
		}
		public UnbracketedKeyValuePairContext unbracketedKeyValuePair(int i) {
			return getRuleContext(UnbracketedKeyValuePairContext.class,i);
		}
		public UnbracketedMapContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unbracketedMap; }
	}

	public final UnbracketedMapContext unbracketedMap() throws RecognitionException {
		UnbracketedMapContext _localctx = new UnbracketedMapContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_unbracketedMap);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(55); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(54);
				unbracketedKeyValuePair();
				}
				}
				setState(57); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << NIL) | (1L << NULL) | (1L << TRUE) | (1L << FALSE) | (1L << DECIMAL_DIGIT) | (1L << STRING_LITERAL) | (1L << HYPHEN))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UnbracketedKeyValuePairContext extends ParserRuleContext {
		public UnbracketedKeyValuePairContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unbracketedKeyValuePair; }
	 
		public UnbracketedKeyValuePairContext() { }
		public void copyFrom(UnbracketedKeyValuePairContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class UnbracketedKeyValuePairIndentedContext extends UnbracketedKeyValuePairContext {
		public KeyContext key() {
			return getRuleContext(KeyContext.class,0);
		}
		public TerminalNode COLON() { return getToken(ConfefeParser.COLON, 0); }
		public TerminalNode INDENT() { return getToken(ConfefeParser.INDENT, 0); }
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public TerminalNode DEDENT() { return getToken(ConfefeParser.DEDENT, 0); }
		public List<TerminalNode> LWS() { return getTokens(ConfefeParser.LWS); }
		public TerminalNode LWS(int i) {
			return getToken(ConfefeParser.LWS, i);
		}
		public UnbracketedKeyValuePairIndentedContext(UnbracketedKeyValuePairContext ctx) { copyFrom(ctx); }
	}
	public static class UnbracketedKeyValuePairInlineContext extends UnbracketedKeyValuePairContext {
		public KeyContext key() {
			return getRuleContext(KeyContext.class,0);
		}
		public TerminalNode COLON() { return getToken(ConfefeParser.COLON, 0); }
		public SimpleValueContext simpleValue() {
			return getRuleContext(SimpleValueContext.class,0);
		}
		public TerminalNode NL() { return getToken(ConfefeParser.NL, 0); }
		public List<TerminalNode> LWS() { return getTokens(ConfefeParser.LWS); }
		public TerminalNode LWS(int i) {
			return getToken(ConfefeParser.LWS, i);
		}
		public UnbracketedKeyValuePairInlineContext(UnbracketedKeyValuePairContext ctx) { copyFrom(ctx); }
	}

	public final UnbracketedKeyValuePairContext unbracketedKeyValuePair() throws RecognitionException {
		UnbracketedKeyValuePairContext _localctx = new UnbracketedKeyValuePairContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_unbracketedKeyValuePair);
		int _la;
		try {
			setState(88);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				_localctx = new UnbracketedKeyValuePairInlineContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(59);
				key();
				setState(61);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==LWS) {
					{
					setState(60);
					match(LWS);
					}
				}

				setState(63);
				match(COLON);
				setState(65);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
				case 1:
					{
					setState(64);
					match(LWS);
					}
					break;
				}
				setState(67);
				simpleValue();
				setState(69);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==LWS) {
					{
					setState(68);
					match(LWS);
					}
				}

				setState(71);
				match(NL);
				}
				break;
			case 2:
				_localctx = new UnbracketedKeyValuePairIndentedContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(73);
				key();
				setState(75);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==LWS) {
					{
					setState(74);
					match(LWS);
					}
				}

				setState(77);
				match(COLON);
				setState(79);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==LWS) {
					{
					setState(78);
					match(LWS);
					}
				}

				setState(81);
				match(INDENT);
				setState(82);
				value();
				setState(84);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==LWS) {
					{
					setState(83);
					match(LWS);
					}
				}

				setState(86);
				match(DEDENT);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BracketedMapContext extends ParserRuleContext {
		public TerminalNode LBRACE() { return getToken(ConfefeParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(ConfefeParser.RBRACE, 0); }
		public List<TerminalNode> WS() { return getTokens(ConfefeParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(ConfefeParser.WS, i);
		}
		public CommaDelimitedKeyValuePairsContext commaDelimitedKeyValuePairs() {
			return getRuleContext(CommaDelimitedKeyValuePairsContext.class,0);
		}
		public BracketedMapContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bracketedMap; }
	}

	public final BracketedMapContext bracketedMap() throws RecognitionException {
		BracketedMapContext _localctx = new BracketedMapContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_bracketedMap);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			match(LBRACE);
			setState(92);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				{
				setState(91);
				match(WS);
				}
				break;
			}
			setState(95);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << NIL) | (1L << NULL) | (1L << TRUE) | (1L << FALSE) | (1L << DECIMAL_DIGIT) | (1L << STRING_LITERAL) | (1L << HYPHEN))) != 0)) {
				{
				setState(94);
				commaDelimitedKeyValuePairs();
				}
			}

			setState(98);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(97);
				match(WS);
				}
			}

			setState(100);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CommaDelimitedKeyValuePairsContext extends ParserRuleContext {
		public List<CommaDelimitedKeyValuePairContext> commaDelimitedKeyValuePair() {
			return getRuleContexts(CommaDelimitedKeyValuePairContext.class);
		}
		public CommaDelimitedKeyValuePairContext commaDelimitedKeyValuePair(int i) {
			return getRuleContext(CommaDelimitedKeyValuePairContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(ConfefeParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(ConfefeParser.COMMA, i);
		}
		public List<TerminalNode> WS() { return getTokens(ConfefeParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(ConfefeParser.WS, i);
		}
		public CommaDelimitedKeyValuePairsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_commaDelimitedKeyValuePairs; }
	}

	public final CommaDelimitedKeyValuePairsContext commaDelimitedKeyValuePairs() throws RecognitionException {
		CommaDelimitedKeyValuePairsContext _localctx = new CommaDelimitedKeyValuePairsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_commaDelimitedKeyValuePairs);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,15,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(102);
					commaDelimitedKeyValuePair();
					setState(104);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==WS) {
						{
						setState(103);
						match(WS);
						}
					}

					setState(106);
					match(COMMA);
					setState(108);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==WS) {
						{
						setState(107);
						match(WS);
						}
					}

					}
					} 
				}
				setState(114);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,15,_ctx);
			}
			setState(115);
			commaDelimitedKeyValuePair();
			setState(117);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,16,_ctx) ) {
			case 1:
				{
				setState(116);
				match(WS);
				}
				break;
			}
			setState(120);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COMMA) {
				{
				setState(119);
				match(COMMA);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CommaDelimitedKeyValuePairContext extends ParserRuleContext {
		public KeyContext key() {
			return getRuleContext(KeyContext.class,0);
		}
		public TerminalNode COLON() { return getToken(ConfefeParser.COLON, 0); }
		public SimpleValueContext simpleValue() {
			return getRuleContext(SimpleValueContext.class,0);
		}
		public List<TerminalNode> WS() { return getTokens(ConfefeParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(ConfefeParser.WS, i);
		}
		public CommaDelimitedKeyValuePairContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_commaDelimitedKeyValuePair; }
	}

	public final CommaDelimitedKeyValuePairContext commaDelimitedKeyValuePair() throws RecognitionException {
		CommaDelimitedKeyValuePairContext _localctx = new CommaDelimitedKeyValuePairContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_commaDelimitedKeyValuePair);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			key();
			setState(124);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(123);
				match(WS);
				}
			}

			setState(126);
			match(COLON);
			setState(128);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,19,_ctx) ) {
			case 1:
				{
				setState(127);
				match(WS);
				}
				break;
			}
			setState(130);
			simpleValue();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TopLevelListContext extends ParserRuleContext {
		public UnbracketedListContext unbracketedList() {
			return getRuleContext(UnbracketedListContext.class,0);
		}
		public BracketedListContext bracketedList() {
			return getRuleContext(BracketedListContext.class,0);
		}
		public TopLevelListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_topLevelList; }
	}

	public final TopLevelListContext topLevelList() throws RecognitionException {
		TopLevelListContext _localctx = new TopLevelListContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_topLevelList);
		try {
			setState(134);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case HYPHEN:
				enterOuterAlt(_localctx, 1);
				{
				setState(132);
				unbracketedList();
				}
				break;
			case EOF:
				enterOuterAlt(_localctx, 2);
				{
				setState(133);
				bracketedList();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UnbracketedListContext extends ParserRuleContext {
		public List<UnbracketedListItemContext> unbracketedListItem() {
			return getRuleContexts(UnbracketedListItemContext.class);
		}
		public UnbracketedListItemContext unbracketedListItem(int i) {
			return getRuleContext(UnbracketedListItemContext.class,i);
		}
		public UnbracketedListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unbracketedList; }
	}

	public final UnbracketedListContext unbracketedList() throws RecognitionException {
		UnbracketedListContext _localctx = new UnbracketedListContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_unbracketedList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(137); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(136);
				unbracketedListItem();
				}
				}
				setState(139); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==HYPHEN );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UnbracketedListItemContext extends ParserRuleContext {
		public TerminalNode HYPHEN() { return getToken(ConfefeParser.HYPHEN, 0); }
		public SimpleValueContext simpleValue() {
			return getRuleContext(SimpleValueContext.class,0);
		}
		public TerminalNode NL() { return getToken(ConfefeParser.NL, 0); }
		public TerminalNode LWS() { return getToken(ConfefeParser.LWS, 0); }
		public TerminalNode LHS() { return getToken(ConfefeParser.LHS, 0); }
		public UnbracketedListItemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unbracketedListItem; }
	}

	public final UnbracketedListItemContext unbracketedListItem() throws RecognitionException {
		UnbracketedListItemContext _localctx = new UnbracketedListItemContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_unbracketedListItem);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			match(HYPHEN);
			setState(143);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LWS) {
				{
				setState(142);
				match(LWS);
				}
			}

			setState(145);
			simpleValue();
			setState(147);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LHS) {
				{
				setState(146);
				match(LHS);
				}
			}

			setState(149);
			match(NL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BracketedListContext extends ParserRuleContext {
		public BracketedListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bracketedList; }
	}

	public final BracketedListContext bracketedList() throws RecognitionException {
		BracketedListContext _localctx = new BracketedListContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_bracketedList);
		try {
			enterOuterAlt(_localctx, 1);
			{
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class KeyContext extends ParserRuleContext {
		public PrimitiveContext primitive() {
			return getRuleContext(PrimitiveContext.class,0);
		}
		public KeyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_key; }
	}

	public final KeyContext key() throws RecognitionException {
		KeyContext _localctx = new KeyContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_key);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(153);
			primitive();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MapContext extends ParserRuleContext {
		public UnbracketedMapContext unbracketedMap() {
			return getRuleContext(UnbracketedMapContext.class,0);
		}
		public BracketedMapContext bracketedMap() {
			return getRuleContext(BracketedMapContext.class,0);
		}
		public MapContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_map; }
	}

	public final MapContext map() throws RecognitionException {
		MapContext _localctx = new MapContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_map);
		try {
			setState(157);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
			case NIL:
			case NULL:
			case TRUE:
			case FALSE:
			case DECIMAL_DIGIT:
			case STRING_LITERAL:
			case HYPHEN:
				enterOuterAlt(_localctx, 1);
				{
				setState(155);
				unbracketedMap();
				}
				break;
			case LBRACE:
				enterOuterAlt(_localctx, 2);
				{
				setState(156);
				bracketedMap();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListContext extends ParserRuleContext {
		public UnbracketedListContext unbracketedList() {
			return getRuleContext(UnbracketedListContext.class,0);
		}
		public BracketedListContext bracketedList() {
			return getRuleContext(BracketedListContext.class,0);
		}
		public ListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_list; }
	}

	public final ListContext list() throws RecognitionException {
		ListContext _localctx = new ListContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_list);
		try {
			setState(161);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case HYPHEN:
				enterOuterAlt(_localctx, 1);
				{
				setState(159);
				unbracketedList();
				}
				break;
			case LWS:
			case DEDENT:
				enterOuterAlt(_localctx, 2);
				{
				setState(160);
				bracketedList();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
